@@ -3,6 +3,7 @@
   * Kernel has been updated to 2.6.22.18
   * Fix for splice local root exploit is included, details on
     http://www.kernel.org/pub/linux/kernel/v2.6/ChangeLog-2.6.22.18
+  * Feature Requests #1421120: Fixup "vim fsync" error on cofs.
 
 * Version 0.7.2
   Bugfixes:
